# python

./: .env  FastAPI.py  hello.py  pyproject.toml  rag.py
.github/: practicecode.py  practiceproject.py
