[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "langchain-community>=0.3.14",
    "langchain-core>=0.3.29",
    "langchain-google-genai>=2.0.9",
    "pydantic>=2.10.4",
    "python-dotenv>=1.0.1",
    "textloader>=0.0.9",
]

]
